--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+:root {
+  /* Colores */
+  --color-primario: #004080; /* Azul */
+  --color-secundario: #0098d4; /* Celeste */
+  --color-terciario: #00f5f0; /* Verde claro */
+  --color-fondo: #f4f4f4; /* Gris claro */
+  --color-texto: #333; /* Gris oscuro */
+  --color-texto-secundario: #fff; /* Blanco */
+
+}
 /* === General === */
 * {
   margin: 0;
@@ -10,13 +20,13 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   background-color: #f4f4f4;
-  color: #333;
+  color: var(--color-texto);
   padding: 1rem;
 }
 
 /* === Navegación === */
 header {
-  background-color: #004080;
+  background-color: var(--color-primario);
   padding: 1rem 0;
 }
 
@@ -29,7 +39,7 @@ nav ul {
 }
 
 nav a {
-  color: #fff;
+  color: var(--color-texto-secundario);
   text-decoration: none;
   font-weight: bold;
 }
@@ -46,7 +56,7 @@ nav a:hover {
 }
 
 .titulo-programas h2 {
-  background-color: #0098d4;
+  background-color: var(--color-secundario);
   color: white;
   font-size: 24px;
   margin: 0;
@@ -54,7 +64,7 @@ nav a:hover {
 }
 
 .titulo-programas span {
-  color: #00f5f0;
+  color: var(--color-terciario);
   font-weight: bold;
 }
 
@@ -113,12 +123,60 @@ main {
   border-radius: 10px;
 }
 
+div.registro-evento {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  border-radius: 10px;
+  background-color: #e6f0ff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.372);
+  max-width: 900px;
+  justify-content: center;
+}
+
+.btn-inscripcion {
+  background-color: var(--color-primario);
+  color: var(--color-texto-secundario);
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  text-decoration: none;
+
+}
+.btn-inscripcion:hover {
+  background-color: #bacde1;
+  color: #031d36;
+  transition: background-color 0.5s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.454);
+}
+/* Efecto al pasar el mouse */
+div.registro-evento:hover {
+  color: #dfe1e4; /* cambia el color del texto */
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5); /* luz interna más brillante */
+  transform: translateY(
+    3px
+  ); /* ligeramente levanta el div para efecto dinámico */
+  background-image: linear-gradient(
+    135deg,
+    #6586b7,
+    #03142e
+  ); /* fondo degradado */
+  transform: translateY(-4px);
+  box-shadow: 0 10px 20px rgba(5, 109, 109, 0.3);
+  transition: all 0.5s ease-in-out; /* transición suave */
+}
+
 #novedades {
   margin-bottom: 1.5rem;
 }
 
 #novedades h2 {
-  color: #004080;
+  color: var(--color-primario);
   font-size: 2rem;
   margin-bottom: 0.5rem;
 }
@@ -137,8 +195,8 @@ main {
 }
 
 #btnNoticias {
-  background-color: #004080;
-  color: #fff;
+  background-color: var(--color-primario);
+  color: var(--color-texto-secundario);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -160,7 +218,7 @@ main {
   background-color: #e6f0ff;
   padding: 1rem;
   border-radius: 8px;
-  border-left: 5px solid #004080;
+  border-left: 5px solid var(--color-primario);
 }
 
 .noticia h3 {
@@ -169,7 +227,7 @@ main {
 }
 
 .noticia a {
-  color: #004080;
+  color: var(--color-primario);
   text-decoration: none;
   font-weight: bold;
 }
@@ -211,27 +269,72 @@ main {
   padding: 0.5rem;
   margin-top: 0.3rem;
 }
-.titulo-descripcion{
+.titulo-descripcion {
   text-align: center;
   padding: 2.5rem;
   margin-bottom: 1.8rem;
   font-size: 1.8rem;
-  color: #004080;
+  color: var(--color-primario);
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
   font-weight: bold;
-  background-image: url('../assets/img/fondoMapeo.jpeg');
+  background-image: url("../assets/img/fondoMapeo.jpeg");
+}
+
+/* Aside de Mapeo */
+div.contenedor-aside {
+  flex: 1;
+  max-width: 350px;
+  margin: 1rem 0.3rem 2rem 0.3rem;
+  background-color: #f8f8f8;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.364);
+  justify-content: center;
+  align-items: center;
+}
+
+div.contenedor-aside h3 {
+  margin-bottom: 1rem;
+  color: var(--color-primario);
 }
 
 /* Tarjetas de empresas */
+
+.cards {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px #ccc;
+  width: 200px;
+  max-height: 250px;
+  padding: 1rem;
+  text-align: center;
+}
+
+.card img {
+  width: 100%;
+  border-radius: 10px;
+}
+.cards :hover {
+  transform: scale(1.05);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
 .tarjetas-empresas {
-  flex: 3;
-  display: grid;
+  flex: 1;
+  display: wrap;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 1.5rem;
 }
 
 .tarjeta {
-  background-color: white;
   border: 1px solid #ddd;
   padding: 1rem;
   border-radius: 10px;
@@ -239,52 +342,6 @@ main {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.277);
   cursor: pointer;
 }
-
-.tarjeta img {
-  width: 100px;
-  height: 80px;
-  object-fit: contain;
-  margin-bottom: 1rem;
-}
-
-.tarjeta h4 {
-  margin-bottom: 0.5rem;
-}
-
-.tarjeta span {
-  display: inline-block;
-  margin-top: 0.2rem;
-  font-size: 0.85rem;
-  color: #666;
-}
-
-.paginacion {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2rem;
-  gap: 1rem;
-}
-
-.paginacion button {
-  padding: 0.5rem 1rem;
-  background-color: #0066cc;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.paginacion button:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
-}
-
-.paginacion span {
-  font-weight: bold;
-}
-
-
 
 /* === Footer === */
 footer {
@@ -315,7 +372,7 @@ footer img {
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  background-color: #004080;
+  background-color: var(--color-primario);
   color: #fff;
 }
 
@@ -336,7 +393,7 @@ footer img {
 /* Ocultar menú por defecto en móvil */
 #mainNav {
   display: none;
-  background-color: #004080;
+  background-color: var(--color-primario);
 }
 
 #mainNav ul {
@@ -377,7 +434,7 @@ footer img {
   #mainNav {
     display: flex !important;
     justify-content: center;
-    background-color: #004080;
+    background-color: var(--color-primario);
   }
 
   #mainNav ul {
