--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Ubuntu&display=swap");
 :root {
   /* Colores */
   --color-primario: #004080; /* Azul */
@@ -6,7 +7,6 @@
   --color-fondo: #f4f4f4; /* Gris claro */
   --color-texto: #333; /* Gris oscuro */
   --color-texto-secundario: #fff; /* Blanco */
-
 }
 /* === General === */
 * {
@@ -21,21 +21,30 @@ body {
   line-height: 1.6;
   background-color: #f4f4f4;
   color: var(--color-texto);
-  padding: 1rem;
 }
 
 /* === Navegación === */
 header {
   background-color: var(--color-primario);
-  padding: 1rem 0;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  border-bottom: 1px solid #eee;
 }
 
+#logo-emprendo {
+  width: 60%;
+  margin-top: 8px;
+  max-width: 150px;
+}
 nav ul {
   list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+  text-align: center;
 }
 
 nav a {
@@ -48,25 +57,174 @@ nav a:hover {
   text-decoration: underline;
 }
 
-/* === Sección Pag Inicio === */
+/* === Sección Pag Inicio === 
+#banner-inicio{
+width: 100%;
+height: auto;
+margin: 0 0 10px 0;
+}
+*/
+/*Hero banner */
+.hero {
+  background-image: url("../assets/img/banner-mobile.jpg");
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+  height: 150px;
+}
 
+.hero h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
+.hero p {
+  font-size: 1.2rem;
+}
+
+/*Sección about*/
+.about {
+  padding: 4rem 2rem;
+  background-color: #f9f9f9;
+  font-family: "Inter", sans-serif;
+}
+
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 2rem;
+  justify-content: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.about-img {
+  flex: 1 1 400px;
+  max-width: 600px;
+}
+
+.about-img img {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.about-text {
+  flex: 1 1 400px;
+  max-width: 600px;
+}
+
+.about-text h4 {
+  font-size: 1.8rem;
+  color: #0077b6;
+  margin-bottom: 1rem;
+}
+
+.about-text p {
+  font-size: 1rem;
+  color: #333;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+
+.about-text .divider {
+  width: 60px;
+  height: 4px;
+  background-color: #0077b6;
+  margin: 1.5rem 0;
+  border-radius: 2px;
+}
+
+.btn-inscripcion {
+  display: inline-block;
+  background-color: #0077b6;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: background-color 0.3s ease;
+}
+
+.btn-inscripcion:hover {
+  background-color: #023e8a;
+}
+/*Sección Features*/
+.features-container {
+  padding: 60px 20px;
+  background: #f5f5f5;
+  text-align: center;
+  position: relative;
+}
+
+.features-container h4 {
+  font-size: 2rem;
+  margin-bottom: 40px;
+}
+
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+/*
+.card {
+  flex: 1 1 300px;
+  max-width: 300px;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+*/
+/*Seccion programas en Inicio*/
 .programas-seccion-inicio {
   text-align: center;
   padding: 40px 20px;
 }
 
 .titulo-programas h2 {
-  background-color: var(--color-secundario);
-  color: white;
-  font-size: 24px;
-  margin: 0;
-  padding: 20px;
+  background-image: linear-gradient(
+    to right,
+    var(--color-primario),
+    var(--color-terciario)
+  );
+  padding: 10px;
+  color: var(--color-fondo);
+  text-align: center;
+  font-size: 0.85rem; /* tamaño base */
+  display: inline-block;
+  width: 100%;
+}
+.titulo-programas {
+  background-image: url("../assets/img/banner-programas.png");
+  background-size: auto;
+  padding: 2.5rem;
+  text-align: center;
+}
+.etapa-programa {
+  margin: 40px 0 20px 0;
+  color: black;
+  font-size: 1.5rem;
+  text-shadow: 1px 1px 2px var(--color-primario);
 }
 
+/*
 .titulo-programas span {
   color: var(--color-terciario);
   font-weight: bold;
-}
+  font-size: 1rem;
+  background-color: var(--color-secundario);
+}*/
 
 .descripcion-programas-inicio {
   margin: 20px auto;
@@ -112,11 +270,14 @@ nav a:hover {
 .verde {
   background-color: #00bfa5;
 }
+.violeta {
+  background-color: #d759eb;
+}
 
 /* === Sección Novedades === */
 main {
   min-height: 80vh;
-  max-width: 900px;
+  max-width: 90%;
   margin: auto;
   padding: 1rem;
   background-color: #fff;
@@ -131,7 +292,7 @@ div.registro-evento {
   border: 1px solid #ccc;
   padding: 1rem;
   border-radius: 10px;
-  background-color: #e6f0ff;
+  background-image: linear-gradient(135deg, #7e9cca, var(--color-primario));
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.372);
   max-width: 900px;
   justify-content: center;
@@ -146,7 +307,6 @@ div.registro-evento {
   cursor: pointer;
   font-size: 1rem;
   text-decoration: none;
-
 }
 .btn-inscripcion:hover {
   background-color: #bacde1;
@@ -163,12 +323,18 @@ div.registro-evento:hover {
   ); /* ligeramente levanta el div para efecto dinámico */
   background-image: linear-gradient(
     135deg,
-    #6586b7,
+    #265db0,
     #03142e
   ); /* fondo degradado */
   transform: translateY(-4px);
   box-shadow: 0 10px 20px rgba(5, 109, 109, 0.3);
   transition: all 0.5s ease-in-out; /* transición suave */
+}
+.registro-evento h2 {
+  color: var(--color-primario);
+  text-shadow: 1.5px 1px 2.5px rgba(255, 255, 255, 0.976);
+  font-size: 1.8rem;
+  margin-bottom: 0.5rem;
 }
 
 #novedades {
@@ -236,6 +402,19 @@ div.registro-evento:hover {
   text-decoration: underline;
 }
 /* Contenedor principal de Mapeo */
+.titulo-descripcionMapeo {
+  text-align: center;
+  padding: 2rem;
+  margin-bottom: 1.8rem;
+  font-size: 1.5rem;
+  color: var(--color-texto-secundario);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.611);
+  font-weight: bold;
+  background-image: url("../assets/img/banner-programas.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .empresas-container {
   display: flex;
   flex-wrap: wrap;
@@ -251,6 +430,10 @@ div.registro-evento:hover {
   padding: 1rem;
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.169);
+}
+
+.filtros p {
+  text-align: center;
 }
 
 .filtros h3 {
@@ -281,6 +464,9 @@ div.registro-evento:hover {
 }
 
 /* Aside de Mapeo */
+aside {
+  height: 50%;
+}
 div.contenedor-aside {
   flex: 1;
   max-width: 350px;
@@ -291,6 +477,7 @@ div.contenedor-aside {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.364);
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 div.contenedor-aside h3 {
@@ -308,12 +495,10 @@ div.contenedor-aside h3 {
 }
 
 .card {
-  background: #fff;
   border-radius: 15px;
   box-shadow: 0 4px 8px #ccc;
   width: 200px;
   max-height: 250px;
-  padding: 1rem;
   text-align: center;
 }
 
@@ -346,9 +531,12 @@ div.contenedor-aside h3 {
 /* === Footer === */
 footer {
   background-color: #003366;
+  background-image: url(https://d1oco4z2z1fhwp.cloudfront.net/templates/default/9931/Insurance_BG2_LP.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   color: #fff;
   text-align: center;
-  padding-top: 2rem;
+  padding: 2rem 0.5rem 0.5rem 0.5rem;
   margin-top: 2rem;
   margin-bottom: 0;
 }
@@ -369,7 +557,6 @@ footer img {
 /* === Logo y botón hamburguesa === */
 .logo-menu {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
   background-color: var(--color-primario);
@@ -380,6 +567,10 @@ footer img {
   font-size: 1.5rem;
   font-weight: bold;
 }
+.Title {
+  text-align: center;
+  padding: 20px 0;
+}
 
 .menu-toggle {
   font-size: 2rem;
@@ -387,7 +578,9 @@ footer img {
   border: none;
   color: #fff;
   cursor: pointer;
-  display: block;
+  display: inline-block;
+  margin-right: 0;
+  margin-left: 80px;
 }
 
 /* Ocultar menú por defecto en móvil */
@@ -417,6 +610,7 @@ footer img {
 
 #mainNav a:hover {
   background-color: #003366;
+  border-radius: 10px;
 }
 
 /* Mostrar menú si tiene clase "open" */
@@ -424,8 +618,202 @@ footer img {
   display: flex;
   flex-direction: column;
 }
+/*Diseños para pagina de inscripción-formulario para el evento*/
+#formulario-inscripcion {
+  background-image: linear-gradient(
+    to bottom,
+    var(--color-primario),
+    var(--color-secundario)
+  );
+}
 
-/* Estilos para pantallas grandes */
+section.contenedor-inscripcion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.382);
+  max-width: 800px;
+  gap: 20px;
+  position: relative;
+  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+}
+
+h1,
+h2,
+h3 {
+  color: var(--color-primario);
+  text-align: center;
+  margin: 0;
+}
+#participantes-registrados {
+  font-weight: bold;
+  margin-top: 20px;
+  text-align: center;
+  color: var(--color-texto-secundario);
+}
+
+a {
+  color: var(--color-primario);
+  text-decoration: none;
+}
+#saludo {
+  color: #007bff;
+  font-weight: bold;
+  text-align: center;
+  margin: 20px 0;
+  font-size: 1.2em;
+}
+form,
+#preguntaStorage {
+  background-color: white;
+  padding: 20px 0;
+  margin: 10px auto;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(80, 88, 97, 0.603);
+  width: 95%;
+  max-width: 800px;
+}
+#datosEmprendimiento {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+input,
+select {
+  margin: 10px;
+  padding: 10px;
+  width: 90%;
+  border: 1px solid #b3d1ff;
+  border-radius: 6px;
+  font-size: 16px;
+  justify-content: center;
+}
+
+button {
+  margin: 20px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background-color 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #005bb5;
+  text-transform: uppercase;
+}
+
+label {
+  margin: 1rem;
+  display: block;
+  font-weight: 600;
+  font-size: 1, 2rem;
+  color: #003366;
+}
+
+#listaUsuarios {
+  margin: 20px auto;
+  padding: 0;
+  list-style: none;
+  padding: 0;
+  max-width: 800px;
+  width: 100%;
+}
+
+#listaUsuarios li {
+  max-width: 95%;
+  background-color: #ffffff;
+  margin: 7px 0;
+  padding: 12px;
+  border-left: 5px solid #007bff;
+  border-radius: 6px;
+  box-shadow: 0 1px 5px rgba(1, 25, 49, 0.644);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#datosEmprendimiento div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+#datosEmprendimiento label {
+  display: flex;
+  align-items: center;
+  gap: 6px; /* Espacio entre el radio y el texto */
+  font-weight: normal;
+  margin-bottom: 4px;
+}
+
+/* Responsive Grid Layout */
+
+.container-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+/* Responsive. Estilos para pantallas grandes */
+@media (min-width: 337px) {
+  .titulo-programas h2 {
+    font-size: 1rem;
+    background-image: linear-gradient(
+      to right,
+      var(--color-primario),
+      var(--color-terciario)
+    );
+    color: white;
+    font-size: 1rem;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+  }
+  .titulo-programas {
+    background-size: cover;
+    padding: 2.5rem;
+    text-align: center;
+  }
+}
+/*Sección contacto:*/
+.Mapa {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.Mapa iframe {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (min-width: 375px) {
+  .menu-toggle {
+    margin-left: 120px;
+  }
+}
+@media (min-width: 425px) {
+  .hero {
+    background-image: url("../assets/img/banner01.jpg");
+  }
+  .menu-toggle {
+    margin-left: 180px;
+  }
+}
+
 @media (min-width: 600px) {
   .menu-toggle {
     display: none;
@@ -450,6 +838,19 @@ footer img {
     padding: 1rem;
   }
 }
+
+@media (min-width: 700px) {
+  .Mapa iframe {
+    width: 400px;
+    height: 360px;
+  }
+}
+
+@media (min-width: 768px) {
+  .titulo-programas h2 {
+    font-size: 1.5rem;
+  }
+}
 /* === Responsive: Desktop === */
 @media (min-width: 600px) {
   nav ul {
@@ -466,5 +867,13 @@ footer img {
 @media (min-width: 900px) {
   #noticiasContainer {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1040px) {
+  div.registro-evento {
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
   }
 }
